styles.css
/*General Styles*/
html,
body {
  scroll-behavior: smooth;
  max-width: 100%;
  overflow-x: hidden;
}

body {
  background-color: #000000;
  color: #ffffff;
  font-family: Gotham, sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-transform: capitalize;
}

a {
  color: #ff6347;
  text-decoration: none;
}

a:hover {
  color: #fff;
  text-decoration: underline;
}

a,
button {
  transition: all 400ms ease-in-out;
}

img {
  max-width: 100%;
  height: auto;
}

video {
  max-width: 100%;
  height: auto;
}

/*Header Styles*/
.header {
  display: flex;
  align-items: center;
  gap: 100px;
  padding: 25px;
}

#logo_left {
  font-size: 35px;
  color: #ffffff;
}

#logo_right {
  color: #ff6347;
  font-size: 55px;
}

.main-navigation > ul > li {
  display: inline-flex;
  margin-right: 30px;
}

.main-navigation > ul > li > a {
  color: #ffffff;
}

.main-navigation > ul > li > a:hover {
  color: #ff6347;
}

/*main-container and children styles*/
.main-container {
  padding: 0 40px 0;
}

.home-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 20px;
  margin-bottom: 70px;
}

/*introduction section*/
.introduction {
  display: flex;
  margin-bottom: 70px;
}

.introduction-left {
  display: flex;
  flex-direction: column;
  flex: 1;
  gap: 10px;
  padding: 10px;
}

.cta-buttons {
  display: flex;
  align-items: center;
  gap: 15px;
}

.cta-buttons a {
  background-color: #ff6347;
  padding: 10px;
  margin: 5px;
}

.cta-buttons a:hover {
  background-color: #fff;
  color: #000000;
}

.introduction-right {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  flex: 1;
  padding: 10px;
  margin-top: 50px;
}

.intro-image {
  width: 300px;
  height: 300px;
  border: 5px solid #fff;
}

/*my-services section*/
.services-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

.service-box {
  width: fit-content;
  padding: 20px;
  margin: 10px;
  border: 5px solid #ffffff;
  box-sizing: border-box;
}

.service-box img {
  width: 250px;
  height: 100px;
}

/*recent-projects styles*/
.projects-container {
  display: flex;
  flex-direction: column;
}

.project-grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

.project-details {
  display: flex;
  flex-direction: column;
}

.project-links {
  display: flex;
  align-items: center;
  padding: 20px;
  margin: 10px;
}

/*styling cta-buttons*/
.w3-button {
  padding: 15px;
  margin: 15px;
}

/*Tools-skills section*/
.tools-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

.skills-image img {
  width: 550px;
  height: 300px;
  border: 5px solid #fff;
}

.tools-container h3 {
  margin-bottom: 5px;
}

.skills {
  margin: 10px;
  padding: 10px;
}

.skills-image {
  margin: 10px;
  padding: 10px;
}

.skill-techniques {
  margin: 10px;
  padding: 10px;
}

.skill-journey {
  margin: 10px;
  padding: 10px;
}

/*precision styles*/
.precision-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 40px;
  box-sizing: border-box;
  padding: 10px;
}

.precision-container h3 {
  margin-bottom: 5px;
}

.craft {
  border-radius: 15px/50px;
  background-color: #000000;
  border: 5px solid #ffffff;
  padding: 30px;
  margin: 30px;
  width: 350px;
  height: 350px;
}

.interface {
  border-radius: 15px/50px;
  background-color: #000000;
  border: 5px solid #ffffff;
  padding: 30px;
  margin: 30px;
  width: 350px;
  height: 350px;
}

.unrivalled {
  border-radius: 15px/50px;
  background-color: #000000;
  border: 5px solid #ffffff;
  padding: 30px;
  margin: 30px;
  width: 350px;
  height: 350px;
}

/*schooling background styles*/
.riley-container {
  margin-bottom: 5px;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

.future {
  box-sizing: border-box;
  border: 2px solid #ffffff;
  margin: 8px;
}

.rosa img {
  width: 370px;
  height: 420px;
  border: 2px solid #ffffff;
  margin: 8px;
}

.reference {
  border: 2px solid #ffffff;
  box-sizing: border-box;
  margin: 8px;
}

.environment img {
  width: 1200px;
  height: 300px;
  border: 2px solid#ffffff;
}

/*call to action section styles*/
.assignment-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 40px;
}

.sharma img {
  width: 500px;
  height: 300px;
}

.sharma {
  box-sizing: border-box;
  border: 5px solid #ffffff;
  margin: 15px;
  padding: 15px;
}

.assignment-container form {
  width: 100px;
  margin-bottom: 10px;
}

/*Footer Styles*/
footer {
  display: flex;
  align-items: center;
  gap: 300px;
  padding: 20px;
}

.copyright {
  text-align: left;
}

.social-links {
  display: flex;
  gap: 30px;
}

.social-links > a {
  color: #ffffff;
  transition: all 0.4s ease-in-out;
  background-color: #ff6347;
  padding: 10px;
  text-decoration: none;
}

.social-links > a:hover {
  text-decoration: underline;
  background-color: #ffffff;
  color: #ff6347;
}

.social-links > a > i {
  font-size: 2em;
}

/*Responsive breakpoints*/
@media (max-width: 1250px) {
  /*precision-container responsive*/
  .precision-container {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (max-width: 1100px) {
  /*schooling section responsive*/
  .riley-container {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (max-width: 991px) {
  .services-grid {
    grid-template-columns: repeat(2, 1fr);
  }

  /*call to action section responsive*/
  .assignment-container {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media (max-width: 917px) and (min-width: 821px) {
  /*introduction section responsive*/
  .cta-buttons {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    align-items: center;
    gap: 15px;
  }
}

@media (max-width: 820px) {
  .introduction {
    flex-direction: column;
    flex-direction: column-reverse;
  }

  .introduction-left h2,
  .introduction-left p {
    text-align: justify;
  }

  .cta-buttons {
    align-self: center;
  }

  /*my Skills and tools responsive*/
  .tools-container {
    grid-template-columns: repeat(1, 1fr);
  }

  .precision-container {
    grid-template-columns: repeat(1, 1fr);
  }

  .riley-container {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media (max-width: 768px) {
  /* Header responsive styles */
  .header {
    gap: 50px;
  }

  /* My services section responsive */
  .service-box {
    padding: 10px;
    border-width: 3px;
  }

  .project-grid {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media (max-width: 652px) {
  /* Header responsive styles */
  .main-navigation > ul > li {
    display: flex;
    flex-direction: column;
    margin-right: 0;
    margin-bottom: 5px;
  }

  /* Introduction section responsive */
  .cta-buttons {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (max-width: 590px) {
  .services-grid {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media (max-width: 462px) {
  .cta-buttons {
    grid-template-columns: repeat(1, 1fr);
  }

  .project-details h3,
  .project-details p {
    text-align: center;
  }

  .project-links {
    align-self: center;
  }
}

